Added more tests and updated README
Added reference to select element on choosin element
Added identical data-csn-hash from choosin element on select element

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "cypress": "cypress",
     "gulp": "gulp",
+    "test": "cypress run",
+    "clean": "rm -rf node_modules && cypress cache clear",
     "start": "gulp start"
   },
   "repository": {
